--- a/index.html
+++ b/index.html
@@ -59,16 +59,29 @@
       <option value='{"w":2700,"h":2025,"fmt":"jpeg","q":0.85,"name":"Etsy"}'>Etsy (2700×2025)</option>
       <option value='{"w":2048,"h":2048,"fmt":"jpeg","q":0.9,"name":"Shopify"}'>Shopify (2048×2048)</option>
       <option value='{"w":1600,"h":1600,"fmt":"jpeg","q":0.8,"name":"eBay"}'>eBay (1600×1600)</option>
+      <option value='{"w":0,"h":0,"fmt":"jpeg","q":0.9,"name":"Custom"}'>Custom…</option>
     </select>
     <label><input id="keepAspect" type="checkbox" checked> Fit inside (no crop)</label>
     <label><input id="watermark" type="checkbox" checked> Watermark (auto off if unlocked)</label>
   </div>
 
-  <div id="drop" class="drop">Drag & drop images here or <input id="file" type="file" accept="image/*" multiple></div>
+  <!-- Custom size inputs, hidden by default. These appear when the "Custom…" preset is selected. -->
+  <div id="customInputs" class="row hidden">
+    <label>Width <input id="customW" type="number" min="1" step="1" style="width:80px;"></label>
+    <label>Height <input id="customH" type="number" min="1" step="1" style="width:80px;"></label>
+    <label>Format
+      <select id="customFmt">
+        <option value="jpeg">JPEG</option>
+        <option value="png">PNG</option>
+      </select>
+    </label>
+  </div>
+
+  <div id="drop" class="drop">Drag &amp; drop images here or <input id="file" type="file" accept="image/*" multiple></div>
 
   <div class="row">
     <button id="processBtn">Process</button>
-    <button id="buyBtn">Unlock batch & remove watermark ($2)</button>
+    <button id="buyBtn">Unlock batch &amp; remove watermark ($2)</button>
     <small id="status"></small>
   </div>
 
@@ -93,6 +106,11 @@
   const list = document.getElementById('list');
   const statusEl = document.getElementById('status');
   const buyBtn = document.getElementById('buyBtn');
+  const presetSelect = document.getElementById('preset');
+  const customInputs = document.getElementById('customInputs');
+  const customW = document.getElementById('customW');
+  const customH = document.getElementById('customH');
+  const customFmt = document.getElementById('customFmt');
   let files = [];
 
   // Check if unlocked via token in URL or localStorage
@@ -117,6 +135,23 @@
       }
     });
   }
+
+  // Show or hide custom size inputs depending on selected preset
+  function updateCustomVisibility() {
+    try {
+      const p = JSON.parse(presetSelect.value);
+      if (p && p.name === 'Custom') {
+        customInputs.classList.remove('hidden');
+      } else {
+        customInputs.classList.add('hidden');
+      }
+    } catch (e) {
+      customInputs.classList.add('hidden');
+    }
+  }
+  presetSelect.addEventListener('change', updateCustomVisibility);
+  // Initialize visibility on page load
+  updateCustomVisibility();
 
   fileInput.addEventListener('change', e => {
     files = [...e.target.files];
@@ -151,7 +186,21 @@
       alert('Add images first');
       return;
     }
-    const preset = JSON.parse(document.getElementById('preset').value);
+    let preset;
+    try {
+      preset = JSON.parse(presetSelect.value);
+    } catch (e) {
+      preset = { w: 0, h: 0, fmt: 'jpeg', q: 0.9, name: 'Custom' };
+    }
+    // If custom, override with user-provided values
+    if (preset.name === 'Custom') {
+      const wVal = parseInt(customW.value, 10);
+      const hVal = parseInt(customH.value, 10);
+      preset.w = isNaN(wVal) || wVal <= 0 ? 0 : wVal;
+      preset.h = isNaN(hVal) || hVal <= 0 ? 0 : hVal;
+      preset.fmt = customFmt.value || 'jpeg';
+      preset.q = 0.9;
+    }
     const keep = document.getElementById('keepAspect').checked;
     const wm = document.getElementById('watermark').checked;
     const token = localStorage.getItem('unlockToken') || '';
