--- a/index.html
+++ b/index.html
@@ -5,37 +5,207 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Etsy Resize – Marketplace Image Resizer</title>
   <style>
+    :root {
+      --primary-bg: #7757ff;
+      --primary-bg-light: #8163ff;
+      --primary-fg: #ffffff;
+      --card-border: #e0e0e0;
+      --card-hover: #f5f4ff;
+      --selected-border: #7b61ff;
+      --process-bg: linear-gradient(90deg,#adafbd,#c2c3d0);
+      --process-fg: #ffffff;
+      --pro-bg: #f7a400;
+      --pro-fg: #ffffff;
+      --pro-hover: #f0a818;
+      --text-color: #333333;
+      --subtext-color: #666666;
+    }
     body {
       font-family: ui-sans-serif, system-ui, sans-serif;
-      max-width: 880px;
+      max-width: 960px;
       margin: 24px auto;
       padding: 0 16px;
+      color: var(--text-color);
     }
+    /* Hero / Drop zone */
     .drop {
-      border: 2px dashed #bbb;
-      border-radius: 12px;
-      padding: 32px;
-      text-align: center;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 200px;
+      margin: 24px 0;
+      border-radius: 16px;
+      background: var(--primary-bg);
+      color: var(--primary-fg);
+      cursor: pointer;
       transition: background 0.3s;
     }
-    .row {
-      display: flex;
+    .drop.dragover {
+      background: var(--primary-bg-light);
+    }
+    .drop svg {
+      width: 40px;
+      height: 40px;
+      margin-bottom: 8px;
+    }
+    .drop p {
+      margin: 0;
+      font-size: 1.2rem;
+    }
+    .drop small {
+      font-size: 0.8rem;
+      opacity: 0.8;
+    }
+    /* Preset grid */
+    .preset-section {
+      margin-top: 32px;
+    }
+    .preset-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
       gap: 12px;
-      align-items: center;
-      margin: 12px 0;
-      flex-wrap: wrap;
+      margin-top: 12px;
     }
-    button {
-      padding: 10px 16px;
-      border-radius: 10px;
-      border: 1px solid #ddd;
-      background: #f7f7f7;
+    .preset-card {
+      border: 1px solid var(--card-border);
+      border-radius: 12px;
+      padding: 16px;
+      background: #ffffff;
       cursor: pointer;
+      transition: box-shadow 0.2s, border-color 0.2s;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      min-height: 100px;
     }
-    select, input {
-      padding: 8px 10px;
-      border-radius: 8px;
-      border: 1px solid #ddd;
+    .preset-card:hover {
+      background: var(--card-hover);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    }
+    .preset-card.selected {
+      border-color: var(--selected-border);
+      box-shadow: 0 0 0 2px var(--selected-border);
+    }
+    .preset-card .icon {
+      font-size: 1.5rem;
+      margin-bottom: 4px;
+    }
+    .preset-card .title {
+      font-weight: bold;
+      font-size: 1rem;
+    }
+    .preset-card .size,
+    .preset-card .quality {
+      font-size: 0.8rem;
+      color: var(--subtext-color);
+    }
+    .preset-card .checkmark {
+      position: absolute;
+      top: 8px;
+      right: 8px;
+      font-size: 1.2rem;
+      color: var(--selected-border);
+      display: none;
+    }
+    .preset-card.selected .checkmark {
+      display: block;
+    }
+    /* Options */
+    .options {
+      margin-top: 32px;
+      border-top: 1px solid var(--card-border);
+      padding-top: 16px;
+    }
+    .option-row {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 12px;
+    }
+    .option-row label {
+      display: flex;
+      align-items: center;
+      gap: 4px;
+      font-size: 0.9rem;
+    }
+    .option-row .pro-badge {
+      background: var(--pro-bg);
+      color: var(--pro-fg);
+      font-size: 0.7rem;
+      padding: 2px 4px;
+      border-radius: 4px;
+      margin-left: 4px;
+    }
+    .option-row input[type="checkbox"] {
+      width: 18px;
+      height: 18px;
+    }
+    /* Custom inputs container */
+    #customInputs {
+      margin-top: 12px;
+    }
+    #customInputs label {
+      margin-right: 12px;
+    }
+    /* Buttons */
+    .process-btn {
+      width: 100%;
+      margin-top: 24px;
+      padding: 16px;
+      border-radius: 12px;
+      border: none;
+      background: var(--process-bg);
+      color: var(--process-fg);
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    .process-btn:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+    }
+    .pro-bar {
+      width: 100%;
+      margin-top: 16px;
+      padding: 16px;
+      border-radius: 12px;
+      border: none;
+      background: var(--pro-bg);
+      color: var(--pro-fg);
+      font-size: 0.95rem;
+      font-weight: bold;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .pro-bar:hover {
+      background: var(--pro-hover);
+    }
+    .pro-bar .features {
+      font-size: 0.8rem;
+      font-weight: normal;
+    }
+    /* Hide the original select; we'll still use it internally */
+    #preset {
+      display: none;
+    }
+    /* Hide original status list for now; we will display status near button */
+    #list {
+      margin-top: 8px;
+      list-style: none;
+      padding-left: 0;
+      font-size: 0.85rem;
+      color: var(--subtext-color);
+    }
+    #status {
+      display: block;
+      margin-top: 8px;
+      font-size: 0.85rem;
+      color: var(--subtext-color);
     }
     .hidden { display: none; }
   </style>
@@ -44,6 +214,104 @@
   <h1>Etsy Resize – Marketplace Image Resizer</h1>
   <p>Instantly resize your product photos to fit popular marketplaces like Amazon, Etsy, Shopify and more. No signup required. Free version allows one image with watermark. Unlock batch resizing and watermark removal for a small one‑time fee.</p>
 
+  <!-- Hero drop zone -->
+  <div id="drop" class="drop">
+    <!-- upload icon -->
+    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M4 17v1a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-1"/>
+      <polyline points="12 12 12 3 16 7"/>
+      <polyline points="8 7 12 3 16 7"/>
+    </svg>
+    <p>Tap or drag images here</p>
+    <small>Free: 1 image at a time</small>
+    <input id="file" type="file" accept="image/*" multiple hidden>
+  </div>
+
+  <!-- Hidden preset select for internal use -->
+  <select id="preset">
+    <option value='{"w":2000,"h":2000,"fmt":"jpeg","q":0.82,"name":"Amazon"}'>Amazon</option>
+    <option value='{"w":2700,"h":2025,"fmt":"jpeg","q":0.85,"name":"Etsy"}'>Etsy</option>
+    <option value='{"w":2048,"h":2048,"fmt":"jpeg","q":0.9,"name":"Shopify"}'>Shopify</option>
+    <option value='{"w":1600,"h":1600,"fmt":"jpeg","q":0.8,"name":"eBay"}'>eBay</option>
+    <option value='{"w":0,"h":0,"fmt":"jpeg","q":0.9,"name":"Custom"}'>Custom</option>
+  </select>
+
+  <!-- Preset cards -->
+  <div class="preset-section">
+    <h2>Marketplace Presets</h2>
+    <div class="preset-grid">
+      <div class="preset-card selected" data-value='{"w":2000,"h":2000,"fmt":"jpeg","q":0.82,"name":"Amazon"}'>
+        <div class="icon">🛒</div>
+        <div class="title">Amazon</div>
+        <div class="size">2000 × 2000</div>
+        <div class="quality">JPEG • 82%</div>
+        <div class="checkmark">✔</div>
+      </div>
+      <div class="preset-card" data-value='{"w":2700,"h":2025,"fmt":"jpeg","q":0.85,"name":"Etsy"}'>
+        <div class="icon">🏬</div>
+        <div class="title">Etsy</div>
+        <div class="size">2700 × 2025</div>
+        <div class="quality">JPEG • 85%</div>
+        <div class="checkmark">✔</div>
+      </div>
+      <div class="preset-card" data-value='{"w":2048,"h":2048,"fmt":"jpeg","q":0.9,"name":"Shopify"}'>
+        <div class="icon">🛍️</div>
+        <div class="title">Shopify</div>
+        <div class="size">2048 × 2048</div>
+        <div class="quality">JPEG • 90%</div>
+        <div class="checkmark">✔</div>
+      </div>
+      <div class="preset-card" data-value='{"w":1600,"h":1600,"fmt":"jpeg","q":0.8,"name":"eBay"}'>
+        <div class="icon">📦</div>
+        <div class="title">eBay</div>
+        <div class="size">1600 × 1600</div>
+        <div class="quality">JPEG • 80%</div>
+        <div class="checkmark">✔</div>
+      </div>
+      <div class="preset-card" data-value='{"w":0,"h":0,"fmt":"jpeg","q":0.9,"name":"Custom"}'>
+        <div class="icon">⚙️</div>
+        <div class="title">Custom</div>
+        <div class="size">Any</div>
+        <div class="quality">Custom</div>
+        <div class="checkmark">✔</div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Options -->
+  <div class="options">
+    <h2>Options</h2>
+    <div class="option-row">
+      <label for="keepAspect">Fit inside (no crop)</label>
+      <input id="keepAspect" type="checkbox" checked>
+    </div>
+    <div class="option-row">
+      <label for="watermark">Watermark<span class="pro-badge">PRO</span></label>
+      <input id="watermark" type="checkbox" checked>
+    </div>
+    <div id="customInputs" class="hidden">
+      <label>Width <input id="customW" type="number" min="1" step="1" style="width:80px;"></label>
+      <label>Height <input id="customH" type="number" min="1" step="1" style="width:80px;"></label>
+      <label>Format
+        <select id="customFmt">
+          <option value="jpeg">JPEG</option>
+          <option value="png">PNG</option>
+        </select>
+      </label>
+    </div>
+  </div>
+
+  <!-- Status and file list -->
+  <ul id="list"></ul>
+  <small id="status"></small>
+
+  <!-- Action buttons -->
+  <button id="processBtn" class="process-btn" disabled>Process &amp; Download</button>
+  <button id="buyBtn" class="pro-bar">
+    <span>Unlock Pro Features</span>
+    <span class="features">Batch processing • No watermark • $2.00</span>
+  </button>
+
   <!-- AdSense top banner -->
   <ins class="adsbygoogle"
        style="display:block; text-align:center; margin:12px 0;"
@@ -51,42 +319,6 @@
        data-ad-slot="9999999999"
        data-ad-format="auto"
        data-full-width-responsive="true"></ins>
-
-  <div class="row">
-    <label>Preset</label>
-    <select id="preset">
-      <option value='{"w":2000,"h":2000,"fmt":"jpeg","q":0.82,"name":"Amazon"}'>Amazon (2000×2000)</option>
-      <option value='{"w":2700,"h":2025,"fmt":"jpeg","q":0.85,"name":"Etsy"}'>Etsy (2700×2025)</option>
-      <option value='{"w":2048,"h":2048,"fmt":"jpeg","q":0.9,"name":"Shopify"}'>Shopify (2048×2048)</option>
-      <option value='{"w":1600,"h":1600,"fmt":"jpeg","q":0.8,"name":"eBay"}'>eBay (1600×1600)</option>
-      <option value='{"w":0,"h":0,"fmt":"jpeg","q":0.9,"name":"Custom"}'>Custom…</option>
-    </select>
-    <label><input id="keepAspect" type="checkbox" checked> Fit inside (no crop)</label>
-    <label><input id="watermark" type="checkbox" checked> Watermark (auto off if unlocked)</label>
-  </div>
-
-  <!-- Custom size inputs, hidden by default. These appear when the "Custom…" preset is selected. -->
-  <div id="customInputs" class="row hidden">
-    <label>Width <input id="customW" type="number" min="1" step="1" style="width:80px;"></label>
-    <label>Height <input id="customH" type="number" min="1" step="1" style="width:80px;"></label>
-    <label>Format
-      <select id="customFmt">
-        <option value="jpeg">JPEG</option>
-        <option value="png">PNG</option>
-      </select>
-    </label>
-  </div>
-
-  <div id="drop" class="drop">Drag &amp; drop images here or <input id="file" type="file" accept="image/*" multiple></div>
-
-  <div class="row">
-    <button id="processBtn">Process</button>
-    <button id="buyBtn">Unlock batch &amp; remove watermark ($2)</button>
-    <small id="status"></small>
-  </div>
-
-  <ul id="list"></ul>
-
   <!-- AdSense bottom banner -->
   <ins class="adsbygoogle"
        style="display:block; text-align:center; margin:12px 0;"
@@ -153,20 +385,26 @@
   // Initialize visibility on page load
   updateCustomVisibility();
 
+  // When user selects files via file input
   fileInput.addEventListener('change', e => {
     files = [...e.target.files];
     renderList();
   });
+  // Make the entire drop zone clickable to open file chooser
+  drop.addEventListener('click', () => {
+    fileInput.click();
+  });
+  // Drag events: toggle a class for visual feedback
   drop.addEventListener('dragover', e => {
     e.preventDefault();
-    drop.style.background = '#fafafa';
+    drop.classList.add('dragover');
   });
-  drop.addEventListener('dragleave', e => {
-    drop.style.background = 'transparent';
+  drop.addEventListener('dragleave', () => {
+    drop.classList.remove('dragover');
   });
   drop.addEventListener('drop', e => {
     e.preventDefault();
-    drop.style.background = 'transparent';
+    drop.classList.remove('dragover');
     files = [...e.dataTransfer.files];
     renderList();
   });
@@ -179,6 +417,9 @@
       list.appendChild(li);
     });
     statusEl.textContent = files.length ? `${files.length} file(s) ready` : '';
+    // Enable or disable the process button based on file selection
+    const processBtnEl = document.getElementById('processBtn');
+    if (processBtnEl) processBtnEl.disabled = files.length === 0;
   }
 
   document.getElementById('processBtn').onclick = async () => {
@@ -227,12 +468,18 @@
       return;
     }
     const blob = await res.blob();
+    // Build a temporary anchor to trigger the file download. Chrome
+    // and some other browsers require that the element be appended to
+    // the document for the click event to properly fire. After the
+    // download is initiated, remove it again to keep the DOM clean.
     const a = document.createElement('a');
     const contentType = res.headers.get('Content-Type');
     const isZip = contentType && contentType.includes('zip');
     a.href = URL.createObjectURL(blob);
     a.download = isZip ? `resized_${Date.now()}.zip` : `resized.${preset.fmt}`;
+    document.body.appendChild(a);
     a.click();
+    document.body.removeChild(a);
     statusEl.textContent = 'Done.';
   };
 
@@ -240,6 +487,22 @@
     // Replace this with your live Stripe payment link URL
     window.location.href = 'https://buy.stripe.com/test_replace_me';
   };
+
+  // Initialize preset cards click handlers. When a card is clicked, it
+  // updates the hidden select value, toggles the selected class, and
+  // triggers the change event so custom size inputs show/hide as needed.
+  document.querySelectorAll('.preset-card').forEach(card => {
+    card.addEventListener('click', () => {
+      // Remove selection from all cards
+      document.querySelectorAll('.preset-card').forEach(c => c.classList.remove('selected'));
+      // Add selection to the clicked card
+      card.classList.add('selected');
+      const val = card.getAttribute('data-value');
+      presetSelect.value = val;
+      // Trigger change on the select to update custom inputs
+      presetSelect.dispatchEvent(new Event('change'));
+    });
+  });
   </script>
 </body>
 </html>
