Clarify watermark option label to 'Remove watermark' with PRO badge.

--- a/index.html
+++ b/index.html
@@ -286,7 +286,9 @@
       <input id="keepAspect" type="checkbox" checked>
     </div>
     <div class="option-row">
-      <label for="watermark">Watermark<span class="pro-badge">PRO</span></label>
+      <!-- Update label text to clarify that the toggle removes the watermark. When
+           the site is unlocked this box becomes unchecked and disabled. -->
+      <label for="watermark">Remove watermark<span class="pro-badge">PRO</span></label>
       <input id="watermark" type="checkbox" checked>
     </div>
     <div id="customInputs" class="hidden">
