Refine process button gradient; ensure 'Remove watermark' label clarity and unlocked indicator.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!doctype html>
+<.process-btn.ready
+
+!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -170,7 +172,7 @@
     }
     /* When ready to process, turn the button green to indicate action */
     .process-btn.ready {
-      background: linear-gradient(90deg, #12c271, #23b67d);
+      background: linear-gradient(90deg, # #0cd45d, #17ba64);
       color: #ffffff;
     }
     .pro-bar {
