--- a/index.html
+++ b/index.html
@@ -236,6 +236,60 @@
     }
     .hidden { display: none; }
 
+    /* Modal overlay for prompting users to unlock pro features. The modal
+       appears centered on screen with a dark translucent backdrop. */
+    .modal {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 1000;
+    }
+    .modal-content {
+      background: #fff;
+      padding: 24px;
+      border-radius: 12px;
+      max-width: 440px;
+      text-align: center;
+      color: #333;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
+    .modal-content p {
+      margin-bottom: 16px;
+      font-size: 0.95rem;
+      line-height: 1.4;
+    }
+    .modal-content a.stripe-link {
+      display: inline-block;
+      margin-top: 8px;
+      padding: 10px 16px;
+      border-radius: 8px;
+      background: var(--pro-bg);
+      color: var(--pro-fg);
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .modal-content a.stripe-link:hover {
+      background: var(--pro-hover);
+    }
+    .modal-content button.close-btn {
+      margin-top: 12px;
+      padding: 8px 14px;
+      border: none;
+      border-radius: 6px;
+      background: #e0e0e0;
+      cursor: pointer;
+      font-size: 0.85rem;
+    }
+    .modal-content button.close-btn:hover {
+      background: #d0d0d0;
+    }
+
     /* Styling for the unlocked indicator shown next to the watermark option
        when the paid tier is active */
     .unlocked-note {
@@ -400,6 +454,18 @@
     <span>Unlock Pro Features</span>
     <span class="features">Batch processing • No watermark • $2.00</span>
   </button>
+
+  <!-- Modal prompting users to upgrade to Pro when they attempt to remove the
+       watermark on the free tier. This overlay appears above the page and
+       prevents interaction until dismissed. The "Pay $2 via Stripe" link
+       opens your Stripe checkout page in a new tab. -->
+  <div id="proModal" class="modal hidden">
+    <div class="modal-content">
+      <p>To remove the watermark and get access to batch resizing, please provide a small one‑time payment of $2 to unlock all pro features, including any new features in the future.</p>
+      <a href="https://buy.stripe.com/test_cNi00bbCe5e1dKBdeh5os00" class="stripe-link" target="_blank">Pay $2 via Stripe</a>
+      <button id="closeModal" class="close-btn">Close</button>
+    </div>
+  </div>
 
   <!-- AdSense top banner -->
   <ins class="adsbygoogle"
@@ -575,8 +641,15 @@
           preset.q = isNaN(qVal) ? 0.9 : qVal / 100;
         }
     const keep = document.getElementById('keepAspect').checked;
-    const wm = document.getElementById('watermark').checked;
+    // Determine watermark state. The watermark checkbox indicates the desire to
+    // remove the watermark (checked means remove). Without a pro token,
+    // watermark removal is not allowed, so watermarkEnabled remains true.
+    const removeWatermark = document.getElementById('watermark').checked;
     const token = localStorage.getItem('unlockToken') || '';
+    let watermarkEnabled = true;
+    if (token) {
+      watermarkEnabled = !removeWatermark;
+    }
 
     // Free limit enforcement client-side: 1 file and watermark must remain
     if (!token && files.length > 1) {
@@ -592,7 +665,7 @@
     form.append('fmt', preset.fmt);
     form.append('q', preset.q);
     form.append('keepAspect', keep ? '1' : '0');
-    form.append('watermark', wm ? '1' : '0');
+    form.append('watermark', watermarkEnabled ? '1' : '0');
     if (token) form.append('token', token);
     const res = await fetch('/process', { method: 'POST', body: form });
     if (!res.ok) {
@@ -616,8 +689,8 @@
   };
 
   buyBtn.onclick = () => {
-    // Replace this with your live Stripe payment link URL
-    window.location.href = 'https://buy.stripe.com/test_replace_me';
+    // Redirect to the provided Stripe Payment Link to unlock pro features
+    window.location.href = 'https://buy.stripe.com/test_cNi00bbCe5e1dKBdeh5os00';
   };
 
   // Initialize preset cards click handlers. When a card is clicked, it
@@ -642,6 +715,38 @@
           qualityValue.textContent = customQ.value + '%';
         });
       }
+
+  // Handle attempts to remove the watermark on the free tier. When the user
+  // unchecks the "Remove watermark" box without having unlocked the pro tier,
+  // display a modal prompting them to pay. After showing the modal, revert
+  // the checkbox state so that free images always have a watermark.
+  (function() {
+    const wmCheckbox = document.getElementById('watermark');
+    const modal = document.getElementById('proModal');
+    const closeBtn = document.getElementById('closeModal');
+    function hasProToken() {
+      const token = localStorage.getItem('unlockToken');
+      return !!token;
+    }
+    if (wmCheckbox && modal && closeBtn) {
+      wmCheckbox.addEventListener('change', () => {
+        // If pro is unlocked or the checkbox is disabled (already unlocked), do nothing.
+        if (hasProToken() || wmCheckbox.disabled) {
+          return;
+        }
+        // If user attempts to uncheck, show modal and revert the checkbox.
+        if (!wmCheckbox.checked) {
+          modal.classList.remove('hidden');
+          // revert the checkbox to checked (free tier always keeps watermark)
+          wmCheckbox.checked = true;
+        }
+      });
+      // Close modal event
+      closeBtn.addEventListener('click', () => {
+        modal.classList.add('hidden');
+      });
+    }
+  })();
   </script>
 </body>
 </html>
